@@ -57,6 +57,8 @@ class Net::SSLeay {
   
   native method version : int ();
   
+  native session_reused : int ();
+  
   # This method is not documented in OpenSSL, but Perl's IO::Socket::SSL needs this method
   native method set_SSL_CTX : Net::SSLeay::SSL_CTX ($ctx : Net::SSLeay::SSL_CTX);
   
